# ChangeLog for net-nds/jxplorer
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nds/jxplorer/ChangeLog,v 1.13 2007/03/17 17:54:33 wltjr Exp $

  17 Mar 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  jxplorer-3.1-r2.ebuild:
  Added ~amd64

*jxplorer-3.1-r2 (16 Mar 2007)

  16 Mar 2007; Petteri Räty <betelgeuse@gentoo.org>
  +jxplorer-3.1-r2.ebuild:
  Switch to use open source javahelp built from source. Dropped amd64 until
  javahelp is keyworded.

  18 Feb 2007; Petteri Räty <betelgeuse@gentoo.org>
  -jxplorer-3.1_rc4.ebuild, -jxplorer-3.1.ebuild:
  Removed unused versions/revisions.

  23 Jan 2007; Steve Dibb <beandog@gentoo.org> jxplorer-3.1-r1.ebuild:
  amd64 stable, security bug 159579

  10 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  jxplorer-3.1-r1.ebuild:
  stable x86, security bug #159579

  10 Jan 2007; Petteri Räty <betelgeuse@gentoo.org> jxplorer-3.1-r1.ebuild:
  Filtering jikes because it fails to compile this.

*jxplorer-3.1-r1 (09 Jan 2007)

  09 Jan 2007; Petteri Räty <betelgeuse@gentoo.org> +files/jxplorer-pre,
  +jxplorer-3.1-r1.ebuild:
  Migrated to generation 2, added source use flag and made sure that we are
  not subject to insecure /tmp file handling. Fixes bug 159579.

*jxplorer-3.1 (04 May 2005)

  04 May 2005; Jan Brinkmann <luckyduck@gentoo.org>
  -jxplorer-3.1_beta1.ebuild, jxplorer-3.1_rc4.ebuild, +jxplorer-3.1.ebuild:
  new upstream version, marked rc4 stable on amd64 and x86. did some cleanup

*jxplorer-3.1_rc4 (22 Jan 2005)

  22 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org>
  +files/jxplorer-gentoo.patch, +files/jxplorer-log4j.patch,
  +files/jxplorer.sh, +jxplorer-3.1_rc4.ebuild:
  version bump. now we build jxplorer from source and we also dont make use of
  packed jars any longer. fixes bug #63243.

  10 Sep 2004; <blubb@gentoo.org> jxplorer-3.1_beta1.ebuild:
  added ~amd64 keyword

  30 Aug 2004; Chris Aniszczyk <zx@gentoo.org> jxplorer-3.1_beta1.ebuild: