@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX build.xml 1871 RMD160 8cc94302bc50f542b6842a0a26b2fa92c2d7ddb8 SHA1 037c318b855c5f9cdb1ddc1f0958e9b8f8ef80d8 SHA256 c1203b1269f3eadbea82fb54e27d75c6a6e89db71d91529ef80b9a1e67762746
 MD5 19c309ed0cfd34dc531818b1607a2a47 files/build.xml 1871
 RMD160 8cc94302bc50f542b6842a0a26b2fa92c2d7ddb8 files/build.xml 1871
@@ -14,6 +17,10 @@ AUX jxplorer-pre 441 RMD160 d5ce6475ada4c3d89b710399c21aec0c8fcf59f7 SHA1 0571ad
 MD5 db64ae472d1ecd5d8d10bda85a853f9a files/jxplorer-pre 441
 RMD160 d5ce6475ada4c3d89b710399c21aec0c8fcf59f7 files/jxplorer-pre 441
 SHA256 0e1fd4598c8a2413634e64be450a4a3ef56620fd7d424d3da41be827fb2d4b08 files/jxplorer-pre 441
+AUX jxplorer-pre-r1 595 RMD160 978410eb4eb06336fb1d92d1d46771b3e712f3f5 SHA1 5d0e49ca9259264619cab21378f25f7195014a0c SHA256 df61361351348f8dc7fb93df648cae6251a6a0f85260872750e84d191f216c57
+MD5 64b8b8ff0e7089b73005ca9ddbbcec2b files/jxplorer-pre-r1 595
+RMD160 978410eb4eb06336fb1d92d1d46771b3e712f3f5 files/jxplorer-pre-r1 595
+SHA256 df61361351348f8dc7fb93df648cae6251a6a0f85260872750e84d191f216c57 files/jxplorer-pre-r1 595
 AUX jxplorer.sh 888 RMD160 4bee3b75090735e5df8e3f6f9a79e21b746e06a5 SHA1 c0830e4fe0fd53f23b30402bbf3ea5569f8dbbee SHA256 c206c099f9ac3febedd6f7a755d7200b8f9b5d94e83f8d829f99f52ff2393a25
 MD5 c71a48763e3bab86565e7c87fd7034b1 files/jxplorer.sh 888
 RMD160 4bee3b75090735e5df8e3f6f9a79e21b746e06a5 files/jxplorer.sh 888
@@ -24,14 +31,18 @@ EBUILD jxplorer-3.1-r1.ebuild 1665 RMD160 e3199be8c1d507db55855f70b2afe77ace0711
 MD5 1489a53a49334dd0a1fd47b29e314d3a jxplorer-3.1-r1.ebuild 1665
 RMD160 e3199be8c1d507db55855f70b2afe77ace0711d7 jxplorer-3.1-r1.ebuild 1665
 SHA256 642d014546733bd7ed3ab0252fab173d5ba23afe78f23e0c8cd8ba982f295b10 jxplorer-3.1-r1.ebuild 1665
-EBUILD jxplorer-3.1-r2.ebuild 1600 RMD160 8571de9b6de687df8b89a3934c8093c239c82dc5 SHA1 a36a17d53fbd10d0d86099c24697437db40d14ce SHA256 5e9c4452b8776ac72c133b86173c16fd83d7b4a8809420d8c7761a82c1129495
-MD5 b18f515cb656efd9cb753aecdd3e078d jxplorer-3.1-r2.ebuild 1600
-RMD160 8571de9b6de687df8b89a3934c8093c239c82dc5 jxplorer-3.1-r2.ebuild 1600
-SHA256 5e9c4452b8776ac72c133b86173c16fd83d7b4a8809420d8c7761a82c1129495 jxplorer-3.1-r2.ebuild 1600
-MISC ChangeLog 2235 RMD160 c069b4759e87c11b6dd71c0192c29967b14b4af9 SHA1 f8c95124be7169cfeb886052453b052f7dbd7b98 SHA256 3f3b176d7f63e8bf99c525b90060606c6489f05c021c51322b9f1825d85c58c4
-MD5 9f6aee606a357843fde90146472bba71 ChangeLog 2235
-RMD160 c069b4759e87c11b6dd71c0192c29967b14b4af9 ChangeLog 2235
-SHA256 3f3b176d7f63e8bf99c525b90060606c6489f05c021c51322b9f1825d85c58c4 ChangeLog 2235
+EBUILD jxplorer-3.1-r3.ebuild 1673 RMD160 267b174a5230fd12e0c5e8aa44287b9986981fb6 SHA1 c2418cd01ed5264ddf80fc8c433ec728853b827c SHA256 69673e7bd9143b45437e704b0dc369524c99dddfff4694c82ea05e4742ea10d6
+MD5 1f07f58782d1e99f509a72f527aa9b01 jxplorer-3.1-r3.ebuild 1673
+RMD160 267b174a5230fd12e0c5e8aa44287b9986981fb6 jxplorer-3.1-r3.ebuild 1673
+SHA256 69673e7bd9143b45437e704b0dc369524c99dddfff4694c82ea05e4742ea10d6 jxplorer-3.1-r3.ebuild 1673
+EBUILD jxplorer-3.1-r4.ebuild 1609 RMD160 de5e5feeb1ae712a32494bd0347dd249e0f4af42 SHA1 e5c4721ef7d9e5b12c3c8deefe5d7f8b49200def SHA256 bf5f0cd10f4130e0fb034f68feac43d1a1a77edcb7b40ffd24d47aa5fd3c22ac
+MD5 34e9da097a11c2693348cc5a0d248f0b jxplorer-3.1-r4.ebuild 1609
+RMD160 de5e5feeb1ae712a32494bd0347dd249e0f4af42 jxplorer-3.1-r4.ebuild 1609
+SHA256 bf5f0cd10f4130e0fb034f68feac43d1a1a77edcb7b40ffd24d47aa5fd3c22ac jxplorer-3.1-r4.ebuild 1609
+MISC ChangeLog 2514 RMD160 6fbb087af8718030bc1e66ab817749890bdd1134 SHA1 83d06574a5def6423c5d9503270c1d04d6c8da9b SHA256 36a5ae42a251d2598ad0f96bec82eb386254a96d2087d123d2a812294705bcba
+MD5 161ac7bd287a0a948c3e2732d0e9a1c2 ChangeLog 2514
+RMD160 6fbb087af8718030bc1e66ab817749890bdd1134 ChangeLog 2514
+SHA256 36a5ae42a251d2598ad0f96bec82eb386254a96d2087d123d2a812294705bcba ChangeLog 2514
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
 MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 metadata.xml 157
@@ -39,6 +50,16 @@ SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9 metadata
 MD5 54e4e5193a63a6b7614067eb362f4c1d files/digest-jxplorer-3.1-r1 476
 RMD160 73f28ee49d74ad9c9ac9b5cb2d3371f0a6294519 files/digest-jxplorer-3.1-r1 476
 SHA256 3392b84096403e10d52ffc009df3666aef3446fee726a2a0d5a3c075a129c832 files/digest-jxplorer-3.1-r1 476
-MD5 54e4e5193a63a6b7614067eb362f4c1d files/digest-jxplorer-3.1-r2 476
-RMD160 73f28ee49d74ad9c9ac9b5cb2d3371f0a6294519 files/digest-jxplorer-3.1-r2 476
-SHA256 3392b84096403e10d52ffc009df3666aef3446fee726a2a0d5a3c075a129c832 files/digest-jxplorer-3.1-r2 476
+MD5 54e4e5193a63a6b7614067eb362f4c1d files/digest-jxplorer-3.1-r3 476
+RMD160 73f28ee49d74ad9c9ac9b5cb2d3371f0a6294519 files/digest-jxplorer-3.1-r3 476
+SHA256 3392b84096403e10d52ffc009df3666aef3446fee726a2a0d5a3c075a129c832 files/digest-jxplorer-3.1-r3 476
+MD5 54e4e5193a63a6b7614067eb362f4c1d files/digest-jxplorer-3.1-r4 476
+RMD160 73f28ee49d74ad9c9ac9b5cb2d3371f0a6294519 files/digest-jxplorer-3.1-r4 476
+SHA256 3392b84096403e10d52ffc009df3666aef3446fee726a2a0d5a3c075a129c832 files/digest-jxplorer-3.1-r4 476
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.3 (GNU/Linux)
+
+iD8DBQFF/aDqcxLzpIGCsLQRAvhwAKCU46XDx4RrCObqByg4o14uFkLQPgCeOEPV
+DlVUbM7inA5zGt/xIgmHsR0=
+=Nv/m
+-----END PGP SIGNATURE-----
