@@ -1,0 +1,6 @@
+MD5 4f9650c2e92f3e9eb08b891663d26b1a JXv3.1deploy.tar.bz2 3078424
+RMD160 b55974f22b496d3a5f14bacfadfbd4053ac1a9bc JXv3.1deploy.tar.bz2 3078424
+SHA256 0b1a3cf27c28bf882009931f438a1d56102b6a89802e4882d006b0ec9089be05 JXv3.1deploy.tar.bz2 3078424
+MD5 fc6984c0c4c2c1a10b57c17874b982f5 JXv3.1src.tar.bz2 418206
+RMD160 0c370cda5ed7c2f24bc09b75e978ea83e2c4de58 JXv3.1src.tar.bz2 418206
+SHA256 378244bbcc44ea85a4a567a453e530f9be62c96f6ff99f623c4bc2d47a4b6c8d JXv3.1src.tar.bz2 418206
