@@ -1,6 +1,13 @@
 # ChangeLog for net-nds/jxplorer
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/jxplorer/ChangeLog,v 1.13 2007/03/17 17:54:33 wltjr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/jxplorer/ChangeLog,v 1.14 2007/03/18 20:28:18 betelgeuse Exp $
+
+*jxplorer-3.1-r4 (18 Mar 2007)
+*jxplorer-3.1-r3 (18 Mar 2007)
+
+  18 Mar 2007; Petteri Räty <betelgeuse@gentoo.org> +files/jxplorer-pre-r1,
+  -jxplorer-3.1-r2.ebuild, +jxplorer-3.1-r3.ebuild, +jxplorer-3.1-r4.ebuild:
+  Fix icons not showing for new installs (bug #169117).
 
   17 Mar 2007; William L. Thomson Jr. <wltjr@gentoo.org>
   jxplorer-3.1-r2.ebuild:
